k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: webhook-queue
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
