k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: webhook-queue
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
